@@ -1,4 +1,10 @@
-(* $Id: version.ml,v 4.0 2001-03-16 19:35:11 ddr Exp $ *)
+(* $Id: version.ml,v 4.1 2001-03-26 17:03:56 ddr Exp $ *)
 (* Copyright (c) 2001 INRIA *)
 
 value txt = "4.01-exp";
+
+value available_languages =
+  ["af"; "br"; "cn"; "cs"; "ct"; "de"; "dk"; "en"; "es"; "eo";
+   "et"; "fi"; "fr"; "he"; "is"; "it"; "lv"; "nl"; "no"; "pl";
+   "pt"; "ru"; "se"]
+;
